// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Icon should match snapshot 1`] = `
<div>
  <i
    class="fa-username"
  />
</div>
`;

exports[`Icon should match snapshot when margin is added 1`] = `
.c0 {
  margin-inline: 4px;
}

<div>
  <i
    class="c0 fa-username"
  />
</div>
`;
